--- a/composer.json
+++ b/composer.json
@@ -16,19 +16,19 @@
     ],
 
     "require": {
-        "php": ">=5.3.3",
-        "zendframework/zend-console": "~2.2",
-        "zendframework/zend-eventmanager": "~2.2",
-        "zendframework/zend-form": "~2.2",
-        "zendframework/zend-modulemanager": "~2.2",
-        "zendframework/zend-mvc": "~2.2",
-        "zendframework/zend-permissions-acl": "~2.2",
-        "zendframework/zend-permissions-rbac": "~2.2",
-        "zendframework/zend-serializer": "~2.2",
-        "zendframework/zend-servicemanager": "~2.2",
-        "zendframework/zend-stdlib": "~2.2",
-        "zendframework/zend-uri": "~2.2",
-        "zendframework/zend-view": "~2.2"
+        "php": "^7.2",
+        "zendframework/zend-console": "^2.8",
+        "zendframework/zend-eventmanager": "^3.2",
+        "zendframework/zend-form": "^2.14",
+        "zendframework/zend-modulemanager": "^2.8",
+        "zendframework/zend-mvc": "^3.0",
+        "zendframework/zend-permissions-acl": "^2.7",
+        "zendframework/zend-permissions-rbac": "^3.0",
+        "zendframework/zend-serializer": "^2.9",
+        "zendframework/zend-servicemanager": "^3.4",
+        "zendframework/zend-stdlib": "^3.2",
+        "zendframework/zend-uri": "^2.7",
+        "zendframework/zend-view": "^2.11"
     },
 
     "require-dev": {
